style: increase sidebar width to avoid items overflowing (#879)

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -26,6 +26,10 @@ main a.edit-icon {
   background: none;
 }
 
+.sidebar-container {
+  --sidebar-width: min-content;
+}
+
 .es-sidebar-content .table-of-contents:first-child {
   margin-block-start: 0;
 }
@@ -91,7 +95,7 @@ li.toc-heading:first-child {
     padding: 0 var(--spacing-4);
     justify-content: start;
   }
-  
+
   .es-sidebar {
     padding: var(--spacing-4);
     background-color: var(--color-gray-200);
